force-app/main/default/objects/Placement__c/Placement__c.object-meta.xml
<CustomObject>
    <description>Stores final placement offers received by students.</description>
    <label>Placement</label>
    <nameField>
        <displayFormat>PLC-{0000}</displayFormat>
        <label>Placement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>