force-app/main/default/objects/Placement__c/fields/Final_Package__c.field-meta.xml
<CustomField>
    <fullName>Final_Package__c</fullName>
    <label>Final Package</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>